03-deploy-aks/yaml files/deployment-app-intercorp.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: application
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: application
    spec:
      containers:
      - name: application-springboot
        image: >-
            dockerluisurrelo/application-springboot:latest
        ports:
        - name: http-port
          containerPort: 8080
        imagePullPolicy: Always
