03-deploy-aks/yaml files/service-app-intercorp.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: application
  name: application-svc
spec:
  ports:
    - name: http-port
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: application
  sessionAffinity: None
  type: LoadBalancer
